--- a/IOS/WiController/en.lproj/MainStoryboard.storyboard
+++ b/IOS/WiController/en.lproj/MainStoryboard.storyboard
@@ -54,21 +54,31 @@
                                     <action selector="setDestinationAddress:" destination="2" eventType="touchUpInside" id="DZM-kj-Oc6"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Z2b-4Z-6JS">
-                                <rect key="frame" x="20" y="213" width="280" height="170"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Z2b-4Z-6JS" customClass="DiscoveryView">
+                                <rect key="frame" x="20" y="213" width="280" height="179"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="DiscoveredComputerCell" id="TzB-xJ-HgN">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="DiscoveredComputerCell" textLabel="r5v-IQ-BvD" style="IBUITableViewCellStyleDefault" id="iVs-ws-BD3">
                                         <rect key="frame" x="0.0" y="22" width="280" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="280" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" contentMode="left" text="Title" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="r5v-IQ-BvD">
+                                                    <rect key="frame" x="10" y="0.0" width="260" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </label>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                     </tableViewCell>
                                 </prototypes>
+                                <sections/>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="xg6-Zo-h4C">
                                 <rect key="frame" x="20" y="400" width="85" height="40"/>
@@ -122,6 +132,7 @@
                         </connections>
                     </view>
                     <connections>
+                        <outlet property="discoveryView" destination="Z2b-4Z-6JS" id="nUt-BU-VCl"/>
                         <outlet property="ipText" destination="aas-aX-0PH" id="9M5-O6-lxo"/>
                         <outlet property="pwdText" destination="l66-0F-gUT" id="fD3-mA-k7G"/>
                         <segue destination="znP-Ap-1I9" kind="modal" identifier="TransmitToMouseView" modalTransitionStyle="flipHorizontal" id="nAz-Tg-dWr"/>
@@ -548,6 +559,9 @@
         </scene>
     </scenes>
     <classes>
+        <class className="DiscoveryView" superclassName="UITableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/DiscoveryView.h"/>
+        </class>
         <class className="KeyboardViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/KeyboardViewController.h"/>
             <relationships>
@@ -591,6 +605,7 @@
                 <relationship kind="action" name="transToKeyboardView:"/>
                 <relationship kind="action" name="transToMouseView:"/>
                 <relationship kind="action" name="transToShortcutsView:"/>
+                <relationship kind="outlet" name="discoveryView" candidateClass="DiscoveryView"/>
                 <relationship kind="outlet" name="ipText" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="pwdText" candidateClass="UITextField"/>
             </relationships>
